arreglando el jwt

--- a/style/style.css
+++ b/style/style.css
@@ -1,1 +1,8 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+#formUser {
+  margin: 15px;
+}
+
+h2 {
+  margin: 15px;
+}
+/*# sourceMappingURL=style.css.map */
