--- a/style/_body.scss
+++ b/style/_body.scss
@@ -1,37 +1,43 @@
- #formUser{
-    //width: 25vw;
-    margin: 15px;
-}
-h2{
-    margin: 15px;
-}
-//formulario actuliazación de usuario
-#formContainer{
-    display: none;
-    position:fixed;
-    justify-content: center;
-    //flex-wrap: wrap;
-    z-index: 100;
-    //left: 0;
-    //top: 0;
-    width: 75vw;
-    height: 75vw;
-    background-color: rgb(245, 163, 163);
-    border: 1px black;
+ #formUser {
+   //width: 25vw;
+   margin: 15px;
+ }
 
-    #formUserupdate{
-        display: flex;
-        flex-wrap: wrap;
-        align-content: flex-start;
-        justify-content: left;
-        padding: 5px 5px;
-        
-    }
+ h2 {
+   margin: 15px;
+ }
 
-    #btnContainer{
-        display: flex;
-        padding: 20px 20px 0px 0px;
-        gap: 15px;
-        justify-content: right;
-    }
-} 
+ //formulario actuliazación de usuario
+ #formContainer {
+   display: none;
+   position: fixed;
+   justify-content: center;
+   //flex-wrap: wrap;
+   z-index: 100;
+   //left: 0;
+   //top: 0;
+   width: 75vw;
+   height: 75vw;
+   background-color: rgb(245, 163, 163);
+   border: 1px black;
+
+   #formUserupdate {
+     display: flex;
+     flex-wrap: wrap;
+     align-content: flex-start;
+     justify-content: left;
+     padding: 5px 5px;
+
+   }
+
+   #btnContainer {
+     display: flex;
+     padding: 20px 20px 0px 0px;
+     gap: 15px;
+     justify-content: right;
+   }
+ }
+
+ #10:hover {
+   color: red;
+ }
