--- a/style/_body.scss
+++ b/style/_body.scss
@@ -3,8 +3,17 @@
    margin: 15px;
  }
 
+ #test {
+   //width: 25vw;
+   margin: 15px;
+ }
+
  h2 {
    margin: 15px;
+ }
+
+ .btnZ {
+   padding: 5px 0px;
  }
 
  //formulario actualización de usuario
@@ -17,9 +26,11 @@
    left: 5vw;
    top: 5vw;
    width: 700px;
-   height: 250px;
+   height: 290px;
    background-color: rgb(245, 163, 163);
    border: 1px black;
+
+
 
    #formUserupdate {
      display: flex;
@@ -30,11 +41,71 @@
 
    }
 
+
    #btnContainer {
      display: flex;
      padding: 20px 20px 0px 0px;
      gap: 15px;
      justify-content: right;
+   }
+ }
+
+ //Formulario actualiación nueva cia
+ #ciaFormContainer {
+   display: none; //display: none; 
+   position: fixed;
+   justify-content: center;
+   //flex-wrap: wrap;
+   z-index: 100;
+   left: 5vw;
+   top: 5vw;
+   width: 700px;
+   height: 290px;
+   background-color: rgb(245, 163, 163);
+   border: 1px black;
+
+   #formCiaupdate {
+     display: flex;
+     flex-wrap: wrap;
+     align-content: flex-start;
+     justify-content: left;
+     padding: 5px 5px;
+
+   }
+
+ }
+
+ #createCiaFormContainer {
+   //width: 25vw;
+   margin: 15px;
+ }
+
+ #formCia {
+   //width: 25vw;
+   margin: 15px;
+ }
+
+ //Nueva region
+ #regionFormContainer {
+   display: none; //display: none; 
+   position: fixed;
+   justify-content: center;
+   //flex-wrap: wrap;
+   z-index: 100;
+   left: 5vw;
+   top: 5vw;
+   width: 700px;
+   height: 290px;
+   background-color: rgb(245, 163, 163);
+   border: 1px black;
+
+   #newRegionx {
+     display: flex;
+     flex-wrap: wrap;
+     align-content: flex-start;
+     justify-content: left;
+     padding: 5px 5px;
+
    }
  }
 
