--- a/style/_body.scss
+++ b/style/_body.scss
@@ -26,7 +26,7 @@
    left: 5vw;
    top: 5vw;
    width: 700px;
-   height: 290px;
+   height: 370px;
    background-color: rgb(245, 163, 163);
    border: 1px black;
 
@@ -107,6 +107,11 @@
      padding: 5px 5px;
 
    }
+ }
+
+ .error {
+   color: red;
+   font-style: italic;
  }
 
  #10:hover {
