--- a/style/_body.scss
+++ b/style/_body.scss
@@ -59,7 +59,7 @@
    z-index: 100;
    left: 5vw;
    top: 5vw;
-   width: 700px;
+   width: 830px;
    height: 290px;
    background-color: rgb(245, 163, 163);
    border: 1px black;
@@ -154,4 +154,9 @@
 
  .rowCheked {
    background-color: lightgray;
+ }
+
+ //nuevo contacto
+ #createContactFormContainer {
+   padding: 0 15px;
  }
