--- a/style/_body.scss
+++ b/style/_body.scss
@@ -114,9 +114,9 @@
    font-style: italic;
  }
 
- #10:hover {
+ /*  #10:hover {
    color: red;
- }
+ } */
 
  //Clases del Front Contactos
  .insideText {
@@ -159,4 +159,43 @@
  //nuevo contacto
  #createContactFormContainer {
    padding: 0 15px;
+ }
+
+ .blacklabel {
+   //display: flex;
+   //align-items: flex-end;
+   color: transparent
+ }
+
+ .form-label {
+   padding: 1px 0 0 1px;
+ }
+
+
+ //Formulario actualiación nuevo contacto
+ #contactFormContainer {
+   display: none; //display: none; 
+   position: fixed;
+   justify-content: center;
+   //flex-wrap: wrap;
+   z-index: 100;
+   left: 5vw;
+   top: 3vw;
+   width: 1100px;
+   height: 680px;
+   background-color: rgb(245, 163, 163);
+   border: 1px black;
+
+   #formContactupdate {
+     display: flex;
+     flex-wrap: wrap;
+     align-content: flex-start;
+     justify-content: left;
+     padding: 0px 5px;
+
+   }
+
+   .col-md-2 {
+     margin: 0;
+   }
  }
