--- a/style/style.css
+++ b/style/style.css
@@ -17,69 +17,46 @@ h2 {
 #formContainer {
   display: none;
   position: fixed;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   z-index: 100;
   left: 5vw;
   top: 5vw;
   width: 700px;
   height: 370px;
-  background-color: #f5a3a3;
+  background-color: rgb(245, 163, 163);
   border: 1px black;
 }
-
 #formContainer #formUserupdate {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: left;
   padding: 5px 5px;
 }
-
 #formContainer #btnContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   padding: 20px 20px 0px 0px;
   gap: 15px;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
+  justify-content: right;
 }
 
 #ciaFormContainer {
   display: none;
   position: fixed;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   z-index: 100;
   left: 5vw;
   top: 5vw;
   width: 830px;
   height: 290px;
-  background-color: #f5a3a3;
+  background-color: rgb(245, 163, 163);
   border: 1px black;
 }
-
 #ciaFormContainer #formCiaupdate {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: left;
   padding: 5px 5px;
 }
 
@@ -94,29 +71,20 @@ h2 {
 #regionFormContainer {
   display: none;
   position: fixed;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
   z-index: 100;
   left: 5vw;
   top: 5vw;
   width: 700px;
   height: 290px;
-  background-color: #f5a3a3;
+  background-color: rgb(245, 163, 163);
   border: 1px black;
 }
-
 #regionFormContainer #newRegionx {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
-  -webkit-box-pack: left;
-      -ms-flex-pack: left;
-          justify-content: left;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: left;
   padding: 5px 5px;
 }
 
@@ -125,10 +93,9 @@ h2 {
   font-style: italic;
 }
 
-#10:hover {
+/*  #10:hover {
   color: red;
-}
-
+} */
 .insideText {
   font-size: small;
 }
@@ -139,20 +106,12 @@ h2 {
 }
 
 .contactActions {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
 }
-
 .contactActions #valueBTN {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  flex-wrap: nowrap;
 }
 
 #addBTNContainer {
@@ -175,4 +134,34 @@ h2 {
 #createContactFormContainer {
   padding: 0 15px;
 }
-/*# sourceMappingURL=style.css.map */
+
+.blacklabel {
+  color: transparent;
+}
+
+.form-label {
+  padding: 1px 0 0 1px;
+}
+
+#contactFormContainer {
+  display: none;
+  position: fixed;
+  justify-content: center;
+  z-index: 100;
+  left: 5vw;
+  top: 3vw;
+  width: 1100px;
+  height: 680px;
+  background-color: rgb(245, 163, 163);
+  border: 1px black;
+}
+#contactFormContainer #formContactupdate {
+  display: flex;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  justify-content: left;
+  padding: 0px 5px;
+}
+#contactFormContainer .col-md-2 {
+  margin: 0;
+}/*# sourceMappingURL=style.css.map */
